--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@comunica/query-sparql": "^4.1.0",
+    "@tailwindcss/vite": "^4.0.9",
+    "@triply/yasqe": "^4.2.28",
     "vue": "^3.5.13"
   },
   "devDependencies": {
@@ -23,13 +26,17 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.1",
+    "tailwindcss": "^4.0.9",
     "typescript": "~5.7.3",
     "vite": "^6.1.0",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.2"
   }
