--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
+    "test": "run-p test:unit",
+    "test:unit": "vitest run",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
@@ -16,13 +18,18 @@
     "@comunica/query-sparql": "^4.1.0",
     "@tailwindcss/vite": "^4.0.9",
     "@triply/yasqe": "^4.2.28",
+    "luxon": "^3.5.0",
+    "rdf-data-factory": "^2.0.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@rdfjs/types": "^2.0.1",
     "@tsconfig/node22": "^22.0.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "@vitest/eslint-plugin": "^1.1.37",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/tsconfig": "^0.7.0",
@@ -30,6 +37,7 @@
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
+    "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.1",
@@ -38,6 +46,7 @@
     "vite": "^6.1.0",
     "vite-plugin-node-polyfills": "^0.23.0",
     "vite-plugin-vue-devtools": "^7.7.2",
+    "vitest": "^3.0.8",
     "vue-tsc": "^2.2.2"
   }
 }
