--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -19,6 +19,6 @@ jobs:
                   node-version: 22.x
                   cache: "npm"
 
-            - run: npm ci
+            - run: npm i
             - run: npm run build
             - run: npm run test
