fix(data): correct path to SSL certificate

--- a/data/nginx/sites-enabled/virtuoso.conf
+++ b/data/nginx/sites-enabled/virtuoso.conf
@@ -10,8 +10,8 @@ server {
     listen 443 ssl;
     server_name biblio-ugent.smessie.com;
 
-    ssl_certificate     /etc/nginx/ssl/biblio-ugent.smessie.com.crt;
-    ssl_certificate_key /etc/nginx/ssl/biblio-ugent.smessie.com.key;
+    ssl_certificate /etc/letsencrypt/live/biblio-ugent.smessie.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/biblio-ugent.smessie.com/privkey.pem;
 
     location / {
         proxy_pass http://virtuoso:8890;
