--- a/data/docker-compose-setup-ssl.yml
+++ b/data/docker-compose-setup-ssl.yml
@@ -9,6 +9,6 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
 
