fix(data): correct domain

--- a/data/nginx/sites-enabled/virtuoso.conf
+++ b/data/nginx/sites-enabled/virtuoso.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name biblio-ugent.smessie.com;
+    server_name ugent-biblio.smessie.com;
 
     # Redirect all HTTP to HTTPS
     return 301 https://$host$request_uri;
@@ -8,10 +8,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name biblio-ugent.smessie.com;
+    server_name ugent-biblio.smessie.com;
 
-    ssl_certificate /etc/letsencrypt/live/biblio-ugent.smessie.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/biblio-ugent.smessie.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/ugent-biblio.smessie.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ugent-biblio.smessie.com/privkey.pem;
 
     location / {
         proxy_pass http://virtuoso:8890;
